# stm32-playground

./: cortex-m3.conf  cortex-m3.h  cross.txt  init.h  link.ld  main.cpp  meson.build  openocd.gdb  reset.c  reset.s  stm32f103xx.h  vectors.c  vectors.cpp  vectors.s
